variables.Variables.scala.code
var nbPas:Int = 0
var i:Boolean = false
if(!(i = estSurBiscuit())){
  while (!i){

    avance()
    nbPas = nbPas + 1

  }
  prendBiscuit()
  recule(nbPas)
  poseBiscuit
}